refactoring and onboarding

--- a/BeamWallet/ViewControllers/Login/CreateWallet/CreateWalletPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/Login/CreateWallet/CreateWalletPasswordViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -36,10 +34,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iJh-QQ-Obr">
-                    <rect key="frame" x="0.0" y="70" width="375" height="597"/>
+                    <rect key="frame" x="0.0" y="50" width="375" height="617"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dct-LB-tdu">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="597"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create new password to access your wallet" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OLc-86-sdM">
                                     <rect key="frame" x="15" y="0.0" width="345" height="19.5"/>
@@ -138,7 +136,7 @@
                                     </constraints>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="seK-ui-jrF" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
-                                    <rect key="frame" x="61" y="503" width="253" height="44"/>
+                                    <rect key="frame" x="61" y="369.5" width="253" height="44"/>
                                     <color key="backgroundColor" red="0.0" green="0.96470588239999999" blue="0.82352941180000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="253" id="pzz-da-Ocx"/>
@@ -167,10 +165,10 @@
                                 <constraint firstItem="OLc-86-sdM" firstAttribute="top" secondItem="Dct-LB-tdu" secondAttribute="top" id="KtV-ym-Ynt"/>
                                 <constraint firstItem="seK-ui-jrF" firstAttribute="centerX" secondItem="Dct-LB-tdu" secondAttribute="centerX" id="Uhe-fu-IW7"/>
                                 <constraint firstItem="OLc-86-sdM" firstAttribute="leading" secondItem="Dct-LB-tdu" secondAttribute="leading" constant="15" id="gfb-C4-l0l"/>
+                                <constraint firstItem="seK-ui-jrF" firstAttribute="top" secondItem="vKG-Rj-luv" secondAttribute="bottom" id="jbU-2a-qj0"/>
                                 <constraint firstItem="vKG-Rj-luv" firstAttribute="leading" secondItem="Dct-LB-tdu" secondAttribute="leading" constant="15" id="k4P-9g-G4z"/>
                                 <constraint firstItem="vKG-Rj-luv" firstAttribute="top" secondItem="OLc-86-sdM" secondAttribute="bottom" constant="50" id="kDT-yZ-DSO"/>
                                 <constraint firstAttribute="trailing" secondItem="vKG-Rj-luv" secondAttribute="trailing" constant="15" id="wXQ-RK-yLu"/>
-                                <constraint firstAttribute="bottom" secondItem="seK-ui-jrF" secondAttribute="bottom" constant="50" id="xHj-q4-UK8"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -193,6 +191,7 @@
                 <constraint firstItem="zy8-tK-3Bs" firstAttribute="bottom" secondItem="iJh-QQ-Obr" secondAttribute="bottom" id="tjD-CD-xZO"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="zy8-tK-3Bs"/>
+            <point key="canvasLocation" x="138" y="123"/>
         </view>
     </objects>
     <resources>
