--- a/BeamWallet/ViewControllers/Login/CreateWallet/CreateWalletProgressViewController.xib
+++ b/BeamWallet/ViewControllers/Login/CreateWallet/CreateWalletProgressViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -29,7 +27,6 @@
                 <outlet property="progressValueLabel" destination="ptl-BF-NdL" id="erB-PX-mi1"/>
                 <outlet property="progressView" destination="bZD-dB-5UV" id="whc-Ut-x2W"/>
                 <outlet property="restotingInfoLabel" destination="sOp-KF-vke" id="ErO-zE-KPf"/>
-                <outlet property="stackYOffset" destination="YDf-uM-xWZ" id="VNk-dw-T6T"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -152,10 +149,11 @@ and never kept in the blockchain.</string>
                 <constraint firstItem="Pob-fL-4oD" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="tcF-90-2XT"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="139" y="120"/>
         </view>
     </objects>
     <resources>
         <image name="iconCancel" width="12" height="12"/>
-        <image name="logo" width="159" height="142"/>
+        <image name="logo" width="158" height="142"/>
     </resources>
 </document>
