--- a/BeamWallet/ViewControllers/Main/Settings/UnlockPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/Main/Settings/UnlockPasswordViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,6 +20,7 @@
             <connections>
                 <outlet property="passField" destination="0d0-i6-Ynk" id="5qt-fj-2Mz"/>
                 <outlet property="titleLabel" destination="Mt6-bA-WTE" id="3EC-RH-JQh"/>
+                <outlet property="topOffset" destination="CpP-Qc-XvX" id="wiA-8P-iBN"/>
                 <outlet property="view" destination="L6L-n6-lVw" id="l3U-uC-6ge"/>
             </connections>
         </placeholder>
@@ -31,7 +30,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your current password" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mt6-bA-WTE">
-                    <rect key="frame" x="20" y="180" width="335" height="19.5"/>
+                    <rect key="frame" x="20" y="120" width="335" height="19.5"/>
                     <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
@@ -41,7 +40,7 @@
                     </userDefinedRuntimeAttributes>
                 </label>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0d0-i6-Ynk" customClass="BMField" customModule="BeamWallet" customModuleProvider="target">
-                    <rect key="frame" x="20" y="249.5" width="335" height="22"/>
+                    <rect key="frame" x="20" y="189.5" width="335" height="22"/>
                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="18"/>
@@ -90,7 +89,7 @@
             <color key="backgroundColor" red="0.01176470588" green="0.18039215689999999" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="0d0-i6-Ynk" firstAttribute="leading" secondItem="YNP-Jo-xdB" secondAttribute="leading" constant="20" id="CNU-SH-hCq"/>
-                <constraint firstItem="Mt6-bA-WTE" firstAttribute="top" secondItem="L6L-n6-lVw" secondAttribute="top" constant="180" id="CpP-Qc-XvX"/>
+                <constraint firstItem="Mt6-bA-WTE" firstAttribute="top" secondItem="L6L-n6-lVw" secondAttribute="top" constant="120" id="CpP-Qc-XvX"/>
                 <constraint firstItem="YNP-Jo-xdB" firstAttribute="bottom" secondItem="cGi-Xl-bTi" secondAttribute="bottom" constant="50" id="Jae-nX-Thm"/>
                 <constraint firstItem="Mt6-bA-WTE" firstAttribute="leading" secondItem="YNP-Jo-xdB" secondAttribute="leading" constant="20" id="WEQ-9w-dZy"/>
                 <constraint firstItem="YNP-Jo-xdB" firstAttribute="trailing" secondItem="0d0-i6-Ynk" secondAttribute="trailing" constant="20" id="YRC-ec-fo8"/>
